# DataAnalysisBase

./: .env.example  .gitignore  Makefile  README.md
backend/: pyproject.toml
backend/src/dataanalysisbase/: __init__.py
backend/src/dataanalysisbase/api/: main.py  market_alerts.py  market_data.py  sync_jobs.py
backend/src/dataanalysisbase/common/: errors.py
backend/src/dataanalysisbase/config_loader/: __init__.py  fusion_cfg.py  loader.py  providers_cfg.py  settings.py  surveillance_cfg.py  watchlist_cfg.py
backend/src/dataanalysisbase/delivery/: __init__.py  cli.py  plan.py  sync.py
backend/src/dataanalysisbase/domain/: __init__.py  contracts.py  enums.py  models.py  price_limits.py  symbols.py
backend/src/dataanalysisbase/ingest/: __init__.py  market_bulk_sync.py
backend/src/dataanalysisbase/observability/: __init__.py  provider_connectivity.py  provider_health.py  system_status.py
backend/src/dataanalysisbase/providers/: __init__.py  akshare_adapter.py  baostock_adapter.py  efinance_adapter.py  industry_mapping.py  market.py  registry.py  tushare_adapter.py  wrappers.py
backend/src/dataanalysisbase/storage/: __init__.py  duckdb_store.py  schema.sql
backend/src/dataanalysisbase/storage/repositories/: __init__.py  aggregate_repo.py  alert_repo.py  base.py  page.py  snapshot_repo.py  sync_job_repo.py
backend/tests/api/: test_market_data_api.py  test_sync_api.py  test_system_status_api.py
backend/tests/config_loader/: test_loader.py
backend/tests/delivery/: test_cli.py  test_plan.py  test_sync.py
backend/tests/domain/: test_price_limits.py  test_symbols.py
backend/tests/ingest/: test_market_bulk_sync.py
backend/tests/observability/: test_provider_connectivity.py  test_provider_health.py  test_system_status.py
backend/tests/providers/: test_akshare_adapter.py  test_baostock_adapter.py  test_efinance_adapter.py  test_industry_mapping.py  test_registry.py  test_tushare_adapter.py  test_wrappers.py
backend/tests/storage/: test_repositories.py
config/: fusion_policy.yaml  providers.yaml  reconcile_thresholds.yaml  surveillance_rules.yaml  sync_schedule.yaml  watchlist.yaml
docs/: AGENT_INTELLIGENCE.md  ARCHITECTURE.md  CODING_STANDARDS.md  CONFIG_REFERENCE.md  DATA_SOURCES.md  DESIGN_REVIEW.md  EXTERNAL_INTEGRATIONS.md  FRAMEWORK_REFERENCES.md  FUSION_RECONCILE.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENCE_ROADMAP.md  MARKET_SURVEILLANCE.md  MODULE_DELIVERY_STANDARD.md  MODULE_DELIVERY_TEMPLATE.md  MODULE_DESIGN.md  MODULE_INTERFACES.md  OPERATIONS_RUNBOOK.md  PRODUCT_OUTCOMES.md  README.md  REQUIREMENTS.md  ROADMAP.md  UI_DESIGN.md
docs/examples/: fusion_policy.yaml  providers.yaml  reconcile_thresholds.yaml  watchlist.yaml
docs/modules/: 01-domain-implementation.md  01-domain-operations.md  01-domain-verification.md  01-domain.md  02-config-implementation.md  02-config-operations.md  02-config-verification.md  02-config.md  03-storage-implementation.md  03-storage-operations.md  03-storage-verification.md  03-storage.md  04-providers-implementation.md  04-providers-operations.md  04-providers-verification.md  04-providers.md  05-ingest-implementation.md  05-ingest-operations.md  05-ingest-verification.md  05-ingest.md  06-surveillance.md  07-observability-implementation.md  07-observability-operations.md  07-observability-verification.md  07-observability.md  08-api-implementation.md  08-api-operations.md  08-api-verification.md  08-api.md  09-frontend-implementation.md  09-frontend-operations.md  09-frontend-verification.md  09-frontend.md  10-analytics.md  11-fusion.md  12-intelligence.md  13-portfolio.md  14-delivery.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  format.ts  main.tsx  styles.css  types.ts
