[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataanalysisbase"
version = "0.1.0"
description = "Local A-share market surveillance and analysis platform."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.0",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
dab = "dataanalysisbase.delivery.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0.12",
]
providers = [
    "akshare>=1.14.0",
    "tushare>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataanalysisbase"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["N818"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
