[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataanalysisbase"
version = "0.1.0"
description = "Local A-share market surveillance and analysis platform."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.0",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
dab = "dataanalysisbase.delivery.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0.12",
]
providers = [
    "akshare>=1.14.0",
    "baostock>=0.9.2",
    "efinance>=0.5.0",
    "pandas>=2.2.0",
    "tushare>=1.4.0",
]
backtest = [
    "vectorbt>=0.26.0",
]
portfolio = [
    "PyPortfolioOpt>=1.5.0",
    "quantstats>=0.0.60",
]
risk = [
    "Riskfolio-Lib>=7.0.0",
]
research = [
    "pyqlib>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataanalysisbase"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["N818"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"
exclude = ["^\\.venv/"]

[[tool.mypy.overrides]]
module = [
    "akshare",
    "akshare.*",
    "duckdb",
    "duckdb.*",
    "_duckdb",
    "_duckdb.*",
    "numpy",
    "numpy.*",
    "pandas",
    "pandas.*",
    "tushare",
    "tushare.*",
]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
